---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 22/8/25
  Major Features:
    - Moved dungeons off of the oceans and into the main bulk of land.
  Features:
    - Dungeon turrets and walls now fall when the dungeon is looted.
    - Hex cores generate inside dungeons.
      They get auto-claimed upon looting their dungeon if at least one of them is unclaimed.
    - There are now easy, medium, and hard types of dungeons to fight on each planet, containing appropriate amounts of loot.
  Minor Features:
    - JSON trades export now includes core quality information and whether the core is or was in a dungeon.
  Balancing:
    - Made dungeons smaller and have better loot on each planet.
    - Rebalanced dungeon difficulties.
    - Nerfed [item=atomic-bomb]. Can be tweaked or disabled in mod settings.
    - Added per-planet global trade productivity modifiers. Can be tweaked or disabled in mod settings.
    - Added Vulcanus quest that can be completed before claiming the center hex, removing the need to bring coins to Vulcanus.
    - Added extra huge volcanic rocks to Vulcanus' first hex to help with starting up if you don't bring coins.
  Bugfixes:
    - Fixed /force-claim command not being able to claim liquid hexes.
    - Fixed dungeon looting quests being completed by picking up manually placed dungeon chests.
    - Fixed crash when opening trade overview while an equipment grid is open.
    - Fixed that the completion of a quest before its revelation was not revealing it.
    - Fixed that the ammo in dungeon turrets was not infinite.
  Changes:
    - JSON trades export now has a more consistent structure, where entries that were nonexistent are now entered as false.
  Optimizations:
    - Improved dungeon generation speed.
  Modding:
    - Flagged mod Resource Spawner Overhaul as incompatible, as it disrupts this mod's initialization.