@@ -1,0 +1,4 @@
+
+return {
+    islands = {nauvis = {}, vulcanus = {}, fulgora = {}, gleba = {}, aquilo = {}}, -- Really only Fulgora and Aquilo need this.
+}
